[gd_scene load_steps=13 format=3 uid="uid://c7j6lwbwgbosr"]

[ext_resource type="Script" path="res://Scripts/client.gd" id="1_bvmvn"]
[ext_resource type="Texture2D" uid="uid://dpu7jjppeja2v" path="res://Assets/task.png" id="2_k2tqp"]
[ext_resource type="Texture2D" uid="uid://de0gq6h0onwex" path="res://Assets/slice.png" id="3_pxlet"]
[ext_resource type="Texture2D" uid="uid://b72amudxuxo8n" path="res://Assets/hard.png" id="4_8gylx"]
[ext_resource type="Texture2D" uid="uid://qhoam0u12smd" path="res://Assets/bad_pip.png" id="4_h1e7v"]
[ext_resource type="Texture2D" uid="uid://bj07g3riacndc" path="res://Assets/back.png" id="4_tye4g"]
[ext_resource type="Texture2D" uid="uid://dsqwv4h4oynxu" path="res://Assets/medium_pip.png" id="5_2itu6"]
[ext_resource type="Texture2D" uid="uid://ws1ghxt16a54" path="res://Assets/hardest.png" id="5_hl5js"]
[ext_resource type="Texture2D" uid="uid://bo6ohnvl8b64o" path="res://Assets/good_pip.png" id="6_6ba24"]

[sub_resource type="LabelSettings" id="LabelSettings_xciys"]
font_size = 25
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_88ebh"]
font_size = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70vuu"]
size = Vector2(350, 250)

[node name="Card" type="Node2D"]
script = ExtResource("1_bvmvn")

[node name="front" type="TextureRect" parent="."]
visible = false
texture_filter = 1
offset_right = 350.0
offset_bottom = 250.0
texture = ExtResource("2_k2tqp")

[node name="Title" type="Label" parent="front"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 0
offset_left = 166.0
offset_top = 6.0
offset_right = 296.0
offset_bottom = 44.0
label_settings = SubResource("LabelSettings_xciys")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Initial Stress" type="Label" parent="front"]
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 0
offset_left = 117.0
offset_top = 6.0
offset_right = 156.0
offset_bottom = 43.0
label_settings = SubResource("LabelSettings_88ebh")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Slice1" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 318.0
offset_top = 12.0
offset_right = 336.0
offset_bottom = 30.0
texture = ExtResource("3_pxlet")

[node name="Slice2" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 318.0
offset_top = 28.0
offset_right = 336.0
offset_bottom = 46.0
texture = ExtResource("3_pxlet")
flip_v = true

[node name="Slice3" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 302.0
offset_top = 28.0
offset_right = 320.0
offset_bottom = 46.0
texture = ExtResource("3_pxlet")
flip_h = true
flip_v = true

[node name="Slice4" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 302.0
offset_top = 12.0
offset_right = 320.0
offset_bottom = 30.0
texture = ExtResource("3_pxlet")
flip_h = true

[node name="Turns Left Counter" type="Label" parent="front"]
layout_mode = 0
offset_left = 354.0
offset_right = 394.0
offset_bottom = 26.0
text = "0"

[node name="pip2" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 149.0
offset_top = 209.0
offset_right = 169.0
offset_bottom = 223.0
texture = ExtResource("4_h1e7v")

[node name="pip3" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 169.0
offset_top = 209.0
offset_right = 189.0
offset_bottom = 223.0
texture = ExtResource("4_h1e7v")

[node name="pip4" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 189.0
offset_top = 209.0
offset_right = 209.0
offset_bottom = 223.0
texture = ExtResource("4_h1e7v")

[node name="pip5" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 209.0
offset_top = 209.0
offset_right = 229.0
offset_bottom = 223.0
texture = ExtResource("5_2itu6")

[node name="pip6" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 229.0
offset_top = 209.0
offset_right = 249.0
offset_bottom = 223.0
texture = ExtResource("5_2itu6")

[node name="pip7" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 249.0
offset_top = 209.0
offset_right = 269.0
offset_bottom = 223.0
texture = ExtResource("5_2itu6")

[node name="pip8" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 269.0
offset_top = 209.0
offset_right = 289.0
offset_bottom = 223.0
texture = ExtResource("6_6ba24")

[node name="pip9" type="TextureRect" parent="front"]
layout_mode = 0
offset_left = 289.0
offset_top = 209.0
offset_right = 309.0
offset_bottom = 223.0
texture = ExtResource("6_6ba24")

[node name="easy" type="Node2D" parent="."]
visible = false

[node name="Standard" type="Node2D" parent="easy"]
position = Vector2(134, 73)
scale = Vector2(0.5, 0.5)

[node name="Great1" type="Node2D" parent="easy"]
position = Vector2(180, 151)
scale = Vector2(0.9, 0.9)

[node name="Great2" type="Node2D" parent="easy"]
position = Vector2(270, 151)
scale = Vector2(0.9, 0.9)

[node name="medium" type="Node2D" parent="."]
visible = false

[node name="Background_Image" type="TextureRect" parent="medium"]
offset_left = 117.0
offset_top = 55.0
offset_right = 340.0
offset_bottom = 187.0
texture = ExtResource("4_8gylx")

[node name="Standard" type="Node2D" parent="medium"]
position = Vector2(134, 73)
scale = Vector2(0.5, 0.5)

[node name="Good1" type="Node2D" parent="medium"]
position = Vector2(180, 105)
scale = Vector2(0.9, 0.9)

[node name="Good2" type="Node2D" parent="medium"]
position = Vector2(270, 105)
scale = Vector2(0.9, 0.9)

[node name="Great1" type="Node2D" parent="medium"]
position = Vector2(180, 196)
scale = Vector2(0.9, 0.9)

[node name="Great2" type="Node2D" parent="medium"]
position = Vector2(270, 196)
scale = Vector2(0.9, 0.9)

[node name="hard" type="Node2D" parent="."]
visible = false

[node name="Background_Image" type="TextureRect" parent="hard"]
offset_left = 117.0
offset_top = 55.0
offset_right = 340.0
offset_bottom = 187.0
texture = ExtResource("5_hl5js")

[node name="Standard" type="Node2D" parent="hard"]
position = Vector2(134, 73)
scale = Vector2(0.5, 0.5)

[node name="Poor1" type="Node2D" parent="hard"]
position = Vector2(180, 87)
scale = Vector2(0.9, 0.9)

[node name="Poor2" type="Node2D" parent="hard"]
position = Vector2(270, 87)
scale = Vector2(0.9, 0.9)

[node name="Good1" type="Node2D" parent="hard"]
position = Vector2(180, 151)
scale = Vector2(0.9, 0.9)

[node name="Good2" type="Node2D" parent="hard"]
position = Vector2(270, 151)
scale = Vector2(0.9, 0.9)

[node name="Great1" type="Node2D" parent="hard"]
position = Vector2(180, 209)
scale = Vector2(0.9, 0.9)

[node name="Great2" type="Node2D" parent="hard"]
position = Vector2(270, 209)
scale = Vector2(0.9, 0.9)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(175, 125)
shape = SubResource("RectangleShape2D_70vuu")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="4turn" type="Button" parent="Control"]
layout_mode = 0
offset_left = 91.0
offset_top = 56.0
offset_right = 155.0
offset_bottom = 118.0
text = "4"

[node name="3turn" type="Button" parent="Control"]
layout_mode = 0
offset_left = 90.0
offset_top = 131.0
offset_right = 154.0
offset_bottom = 193.0
text = "3"

[node name="2turn" type="Button" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 132.0
offset_right = 240.0
offset_bottom = 194.0
text = "2"

[node name="1turn" type="Button" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 56.0
offset_right = 240.0
offset_bottom = 118.0
text = "1"

[node name="back" type="TextureRect" parent="."]
offset_top = 250.0
offset_right = 250.0
offset_bottom = 600.0
rotation = -1.5708
texture = ExtResource("4_tye4g")

[connection signal="pressed" from="Control/4turn" to="." method="_on_turn_pressed" binds= [4]]
[connection signal="pressed" from="Control/3turn" to="." method="_on_turn_pressed" binds= [3]]
[connection signal="pressed" from="Control/2turn" to="." method="_on_turn_pressed" binds= [2]]
[connection signal="pressed" from="Control/1turn" to="." method="_on_turn_pressed" binds= [1]]
